[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Font/new_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/You_win.png" type="Texture" id=2]
[ext_resource path="res://You_win.gd" type="Script" id=3]
[ext_resource path="res://Assets/audio/gamewin.mp3" type="AudioStream" id=4]

[node name="You_win" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512, 299 )
scale = Vector2( 1.6, 1.67222 )
texture = ExtResource( 2 )

[node name="Timer1" type="Timer" parent="."]
autostart = true

[node name="Time1" type="Label" parent="."]
margin_left = 504.0
margin_top = 368.0
margin_right = 528.0
margin_bottom = 414.0
custom_fonts/font = ExtResource( 1 )
text = "5"

[node name="ezpz" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="timeout" from="Timer1" to="." method="_on_Timer1_timeout"]
